<resources>
    <string name="app_name">Pampas</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="sig_in">Iniciar Sesión</string>
    <string name="introduction">INTRODUCCIÓN</string>
    <string name="check_in">Registrarse</string>
    <string name="login">Inicio</string>
    <string name="enter_your_email">Introduce tu correo electrónico</string>
    <string name="enter_your_password">Ingresa tu contraseña</string>
    <string name="input_error">error al ingresar</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="click_here_to_register">pulse aquí para registrarse</string>
    <string name="enter_your_name">Ingrese nombre</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pampas">Pampas - Tayacaja</string>
    <string name="yauricocha">Laguna de Yauricocha</string>
    <string name="y_descricion">"Este espejo de agua tiene una extensión de 80 hectáreas y se encuentra en el límite con el distrito de Pucará. Un lugar ideal para acampar y reconciliarse con la naturaleza.  "</string>
    <string name="rq_description">El Camino del Inca es una de las rutas más importantes de Sudamérica, y la que está en el anexo de Atocc forma parte de esta gran red de caminos  que fueron construidos por los antiguos Incas.</string>
    <string name="rt_description">"Forma parte del Complejo Hidroeléctrico del Mantaro y está en el distrito de Quichuas. posee una capacidad de 7 millones de metros cúbicos. Su muro de contención tiene una altura de 70 metros . "</string>
    <string name="hsjp_description">"Es una típica construción de la época repulicana, Esta hacienda era muy importante hace muchos años, se cuenta que en el siglo pasado era considerado como el principal distribuidor de leche y sus derivados en la región central del país.  "</string>
    <string name="cr_description">Una de las grandes riquezas turísticas de Tayacaja son sus aguas que recorren toda la provincia. Las caídas de estas aguas dejan notar velos blancos que hacen que los paisajes sean muy hermosos.</string>
    <string name="R_Qhapaq">Ruta del Qhapaq Ñam</string>
    <string name="r_tablachaca">Represa de Tablachaca</string>
    <string name="hacienda_s_p">Casa Hacienda San Juan de Pillo</string>
    <string name="cataratas">Cataratas y ríos</string>
    <string name="hotel_plaza">Hotel Plaza</string>
    <string name="hotel_d_confort">Hotel D\'Confort</string>
    <string name="hotel_jardin">Hotel Jardin</string>
    <string name="hotel_angeles">Hotel Angeles</string>
    <string name="hotel_surge">Hotel Surge</string>
    <string name="hotel_blue">Hotel Blue</string>
    <string name="hp_ubicacion">Dirección: Jr. Grau 169 plaza principal pampas, Pampas 09156\nTeléfono: 985 883 019</string>
    <string name="hc_ubicacion">Ubicado en: Pampas Tayacaja\nDirección: Jr. Jose Olaya 116, Pampas 09156\nTeléfono: 930 605 565</string>
    <string name="hj_ubicacion">Dirección: J42H+58W, Jirón Bolognesi, Pampas 09156</string>
    <string name="rest_dnofox">Rest. Dnofox</string>
    <string name="rest_taya">Rest. Taya</string>
    <string name="rest_gondolas">Rest. Gondolas</string>
    <string name="rest_la_gruta">Rest. La Gruta</string>
    <string name="rest_yonatans">Rest. Yonatans</string>
    <string name="rest_tayta">Rest. Tayta</string>
    <string name="dnofox_ubicacion">Dirección: Jr. Necochea 490, Pampas 09156\nTeléfono: 967 171 185</string>
    <string name="taya_ubicacion">Dirección: Jr. Colon 151, Pampas 02605\nTeléfono: 917 840 425</string>
    <string name="gondolas_ubicacion">Dirección: Jirón Bolognesi 230, Pampas 09156\nTeléfono: 929 453 648</string>
    <string name="la_gruta_ubicacion">Dirección: Jirón Bolognesi 230, Pampas 09156\nTeléfono: 929 453 648</string>
    <string name="tayta_ubicacion">Dirección: J42M+7F2, Jr. Alfonso Ugarte 318, Pampas 09156</string>
    <string name="yonatans_ubicacion">Dirección: Jr. Jose Olaya 232, Pampas 09156\nTeléfono: 954 480 457</string>
    <string name="chat_general">CHAT GENERAL</string>
    <string name="descripcion_about_titlulo">Descubre las maravillas de Pampas. Encuentra lugares espectaculares para visitar, comparte tus experiencias y encuentra servicios turísticos.</string>
</resources>