<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Home.FragmentFoot.TourismFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTurismo"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/arvo_bold"
            android:text="Turismo"
            android:textColor="@color/title_text"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/IvTurismo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TvTurismo1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/arvo_bodalta"
            android:text="@string/pampas"
            android:textColor="@color/title_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/IvTurismo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTurismo" />

        <ImageView
            android:id="@+id/IvTurismo"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/turismo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTurismo"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/CVTourismOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/backgroundCardView"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/IvTurismo">

            <LinearLayout
                android:id="@+id/LLTourismOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/IVTourismOne"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/rounded_corners"
                    android:clipToOutline="true"
                    android:outlineProvider="background"
                    android:scaleType="fitXY"
                    android:src="@drawable/lyprincipal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TVTourismOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_bodalta"
                        android:gravity="center"
                        android:text="@string/yauricocha"
                        android:textColor="@color/description_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvTourismOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_italic"
                        android:gravity="center"
                        android:text="@string/y_descricion"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CVTourismTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/backgroundCardView"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CVTourismOne">

            <LinearLayout
                android:id="@+id/LLTourismTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/IVTourismTwo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/rounded_corners"
                    android:clipToOutline="true"
                    android:outlineProvider="background"
                    android:scaleType="fitXY"
                    android:src="@drawable/rqprincipal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TVTourismTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_bodalta"
                        android:gravity="center"
                        android:text="@string/R_Qhapaq"
                        android:textColor="@color/description_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvTourismTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_italic"
                        android:gravity="center"
                        android:text="@string/rq_description"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CVTourismTree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/backgroundCardView"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CVTourismTwo">

            <LinearLayout
                android:id="@+id/LLTourismTree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/IVTourismTree"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/rounded_corners"
                    android:clipToOutline="true"
                    android:outlineProvider="background"
                    android:scaleType="fitXY"
                    android:src="@drawable/rtprincipal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TVTourismTree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_bodalta"
                        android:gravity="center"
                        android:text="@string/r_tablachaca"
                        android:textColor="@color/description_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvTourismTree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_italic"
                        android:gravity="center"
                        android:text="@string/rt_description"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CVTourismFour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/backgroundCardView"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CVTourismTree">

            <LinearLayout
                android:id="@+id/LLTourismFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/IVTourismFour"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/rounded_corners"
                    android:clipToOutline="true"
                    android:outlineProvider="background"
                    android:scaleType="fitXY"
                    android:src="@drawable/sjprincipal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TVTourismFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_bodalta"
                        android:gravity="center"
                        android:text="@string/hacienda_s_p"
                        android:textColor="@color/description_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvTourismFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_italic"
                        android:gravity="center"
                        android:text="@string/hsjp_description"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CVTourismFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/backgroundCardView"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CVTourismFour">

            <LinearLayout
                android:id="@+id/LLTourismFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/IVTourismFive"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/rounded_corners"
                    android:clipToOutline="true"
                    android:outlineProvider="background"
                    android:scaleType="fitXY"
                    android:src="@drawable/cr_principal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TVTourismFive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_bodalta"
                        android:gravity="center"
                        android:text="@string/cataratas"
                        android:textColor="@color/description_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvTourismFive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arvo_italic"
                        android:gravity="center"
                        android:text="@string/cr_description"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
